applets/appmenu: Workaround global menu getting dismissed unexpectedly

Qt has a fallback code path to dismiss all popups when the application
loses keyboard focus. The issue is that QGuiApplication::focusWindow()
not always has reasonable values.

For example, after calling widget->hide(), the QGuiApplication will think
that the widget's window still has focus for a while. This can result in
popups getting unexpectedly dismissed:

- hover the File entry
- the corresponding File popup will be shown
- hover the Edit entry
- the File popup will be hidden
- the Edit popup will be shown
- at this point, QGuiApplication::focusWindow() still reports that the
  File popup window has the keyboard focus
- some time later, qtwayland will report a new focused window. It is
  racy, Qt can report either null or the Edit popup window.
- if it's null, the Edit popup will be hidden

BUG: 494635